--- a/Website/requirements.txt
+++ b/Website/requirements.txt
@@ -1,9 +1,10 @@
-Flask==1.1.1
-Flask-Mail==0.9.1
-Flask-WTF==0.14.3
-WTForms==2.3.1
+Flask
+Flask-Mail
+Flask-WTF
+WTForms
 PyMySQL
-email-validator==1.1.1
+email-validator
 gunicorn
 pyjwt
 python-dotenv
+apiflask
